# haskell-edsl

./: CHANGELOG.md  LICENSE  README.md  haskell-edsl.cabal
app/: Main.hs
src/: Deep.hs  Parser.hs  Shallow.hs
