cabal-version:   3.0
name:            haskell-edsl
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      fkrausear@gmail.com
author:          Francisco Krause
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Shallow
        Deep
        Parser

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.1

executable haskell-edsl
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        haskell-edsl

test-suite haskell-edsl-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        haskell-edsl
